--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body {
     justify-content: center;
     flex-direction: column;
     flex-wrap: wrap;
+    display: none;
 }
 
 .question {
@@ -54,4 +55,23 @@ ul {
     height: fit-content;
     width: fit-content;
     margin: auto;
+}
+
+.popUp{
+    border: 1px solid black;
+    background-color: purple;
+    color: white;
+    height: 40vh;
+    width: 60vw;
+    margin:0 auto;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    text-align: center;
+}
+.btn{
+    background-color: yellow;
+    color: black;
 }
