--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap");
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
 
 body {
     background-color: black;
-    font-family: 'caveat', 'sans-serif';
-
+    font-family: "caveat", "sans-serif";
+    padding: 0;
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
 }
 
 .logo {
-    background: url('../images/friends-logo.jpg') no-repeat center center;
+    background: url("../images/friends-logo.jpg") no-repeat center center;
     background-size: contain;
     width: 80vw;
-    height: 30vh;
+    height: 20vh;
     margin: auto;
+}
+
+h1,
+p {
+    margin-bottom: 5px;
+    font-size: 2em;
 }
 
 .quizArea {
@@ -24,13 +39,14 @@ body {
     justify-content: center;
     flex-direction: column;
     flex-wrap: wrap;
-    display: none;
 }
 
-.question {
+.questions {
     height: 10vh;
     width: 40vw;
     border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 2px;
     font-weight: 700;
     margin: auto;
     margin-top: 16px;
@@ -43,6 +59,10 @@ body {
     font-weight: 400;
     display: inline-flex;
     margin: auto;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 2px;
+    gap: 10px;
+    color: black;
 }
 
 ul {
@@ -57,21 +77,44 @@ ul {
     margin: auto;
 }
 
-.popUp{
+.popUp {
     border: 1px solid black;
     background-color: purple;
     color: white;
-    height: 40vh;
+    height: 60vh;
     width: 60vw;
-    margin:0 auto;
+    margin: 0 auto;
     display: flex;
     align-content: center;
     justify-content: center;
     flex-direction: column;
     flex-wrap: wrap;
     text-align: center;
+    border-radius: 5px;
 }
-.btn{
+
+.controls {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.btn {
     background-color: yellow;
     color: black;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+.hide {
+    display: none;
+}
+
+@media screen and (max-width: 720px) {
+    .popUp {
+        height: 80vh;
+        width: 80vw;
+    }
 }
