--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,12 +26,16 @@ body {
 h1,
 p {
     margin-bottom: 5px;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
+h2{
+    font-size: 1em;
+}
+/* style the quiz game section */
 .quizArea {
     height: fit-content;
-    width: 60vw;
+    width: 80vw;
     margin: auto;
     background-color: white;
     display: flex;
@@ -42,22 +46,53 @@ p {
 }
 
 .questions {
-    height: 10vh;
-    width: 40vw;
+    height: fit-content;
+    width: 60vw;
     border: 1px solid black;
     border-radius: 5px;
     box-shadow: 0 0 10px 2px;
     font-weight: 700;
     margin: 0 auto;
     margin-top: 16px;
+    font-size: 1.5em;
+    background-color: rgba(0, 0, 255, 0.336);
+}
+
+.answerBtns {
+    display: flex;
+    font-size: 1em;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+}
+
+.btn,
+.answerButton {
+    background-color: yellow;
+    color: black;
+    font-size: 2em;
+    box-shadow: 0 0 10px 2px;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+
+.answerButton {
+    width: 60vw;
+    margin: 0 auto;
+    margin-top: 16px;
+    background-color: rgba(183, 0, 255, 0.171);
 }
 
 .score {
     height: fit-content;
     width: fit-content;
     margin: auto;
+    font-size: 1.5em;
 }
 
+/* Welcome page section */
 .popUp {
     border: 1px solid black;
     background-color: purple;
@@ -82,17 +117,7 @@ p {
     flex-wrap: wrap;
 }
 
-.btn {
-    background-color: yellow;
-    color: black;
-    font-size: 2em;
-    margin-top: 10px;
-}
-
-.hide {
-    display: none;
-}
-
+/* styles for answer selections*/
 .correct {
     background-color: green;
 }
@@ -101,6 +126,9 @@ p {
     background-color: red;
 }
 
+.hide {
+    display: none;
+}
 @media screen and (max-width: 720px) {
     .popUp {
         height: 80vh;
