--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ p {
 h2{
     font-size: 1em;
 }
+
 /* style the quiz game section */
 .quizArea {
     height: fit-content;
@@ -129,6 +130,14 @@ h2{
 .hide {
     display: none;
 }
+
+/* style the modal for save highscores */
+.myModal {
+    border: 1px solid black;
+    box-shadow: 0 0 10px 2px;
+    border-radius: 5px;
+}
+
 @media screen and (max-width: 720px) {
     .popUp {
         height: 80vh;
