--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,7 @@ h2 {
     margin: auto;
     font-size: 2em;
     padding-top: 16px;
-    padding-bottom: 16px'
+    padding-bottom: 16px;
 
 }
 
