Add style to leaderboard

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,10 +141,6 @@ h2 {
     background-color: rgba(255, 0, 0, 0.596);
 }
 
-.hide {
-    display: none;
-}
-
 /* style the modal for save highscores */
 .modal {
     border: 1px solid black;
@@ -164,7 +160,7 @@ h2 {
 
 input {
     display: flex;
-    background-color:rgba(183, 0, 255, 0.144);
+    background-color: rgba(183, 0, 255, 0.144);
     color: black;
     margin-bottom: 10px;
     margin-top: 10px;
@@ -177,6 +173,7 @@ input {
 
 }
 
+/*style the leaderboard*/
 .leaderboard {
     border: 1px solid black;
     border-radius: 5px;
@@ -185,6 +182,20 @@ input {
     width: 60vw;
     margin: 0 auto;
     box-shadow: 0 0 10px 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.highScoresList {
+    margin: 0 auto;
+    padding-left: 5vw
+}
+
+.highScore {
+    margin-right: 5vw;
+    list-style-type: none;
 }
 
 .instructionText {
@@ -194,7 +205,10 @@ input {
     background-color: white;
     color: black;
     width: 60vw;
+}
 
+.hide {
+    display: none;
 }
 
 @media screen and (max-width: 720px) {
